--- a/public/ueditor/dialogs/map/map.html
+++ b/public/ueditor/dialogs/map/map.html
@@ -8,12 +8,12 @@
     <style type="text/css">
         .content{width:530px; height: 350px;margin: 10px auto;}
         .content table{width: 100%}
-        .content table td{vertical-align: middle;}
+        .content table td{vertical-align: middle;font-size: 14px;}
         #city,#address{height:21px;background: #FFF;border:1px solid #d7d7d7; line-height: 21px;}
         #city{width:60px}
         #address{width:130px}
-        #is_dynamic_label span{vertical-align:middle;margin: 3px 0px 3px 3px;}
-        #is_dynamic_label input{vertical-align:middle;margin: 3px 3px 3px 50px;}
+        #is_dynamic_label span{vertical-align:middle;margin: 3px 0px 3px 3px;font-size: 14px;}
+        #is_dynamic_label input{vertical-align:middle;margin: 3px 3px 3px 50px;font-size: 14px;}
     </style>
 </head>
 <body>
